@@ -9,3 +9,4 @@ extern bool MemWatchLoadFileOnStart;
 extern char *memw_recent_files[];
 extern HWND memw_pwindow;
 extern bool RamChangeInitialize;
+extern bool MemWCollapsed;
